tests/NormalTests/paczka1/small_fuzzy/88615796.err
Error in line 8: uc87C1Z5vy S112 3,9
Error in line 12: NGc A163 75,6
Error in line 11: uc87C1Z5vy A163 35,0
